--- a/css/pm.css
+++ b/css/pm.css
@@ -327,7 +327,7 @@ a {
 }
 .parallaxContainer .program .day1 {
   background-image: url('/img/program/bg_2.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 .parallaxContainer .program .day2 {
   background-image: url('/img/program/bg_1.png');
@@ -335,7 +335,7 @@ a {
 }
 .parallaxContainer .program .day3 {
   background-image: url('/img/program/bg_3.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 .parallaxContainer .partners {
   display: block;
