--- a/css/pm.less
+++ b/css/pm.less
@@ -430,7 +430,7 @@ a {
 
     .day1 {
       background-image: url('/img/program/bg_2.jpg');
-      background-repeat: no-repeat;
+      background-repeat: repeat;
     }
     .day2 {
       background-image: url('/img/program/bg_1.png');
@@ -438,7 +438,7 @@ a {
     }
     .day3 {
       background-image: url('/img/program/bg_3.jpg');
-      background-repeat: no-repeat;
+      background-repeat: repeat;
     }
   }
 
